--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,16 +8,164 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>タイトル</h1>
+    <div class="mv">
+      <h1>
+        <span class="main-title">
+          <span class="word">S</span>
+          <span class="word">c</span>
+          <span class="word">r</span>
+          <span class="word">o</span>
+          <span class="word">l</span>
+          <span class="word">l</span>
+          <span class="word space">A</span>
+          <span class="word">n</span>
+          <span class="word">i</span>
+          <span class="word">m</span>
+          <span class="word">a</span>
+          <span class="word">t</span>
+          <span class="word">i</span>
+          <span class="word">o</span>
+          <span class="word">n</span>
+        </span>
+        <span class="sub-title">with GSAP</span>
+      </h1>
+      <div class="scroll"></div>
+    </div>
 
-    <img
-      width="800"
-      height="533"
-      srcset="./images/800.jpg 800w, ./images/400.jpg 400w"
-      src="./images/800.jpg"
-      sizes="(max-width: 800px) 100vw, 400px"
-      alt="..."
-    />
+    <div class="section2 section">
+      <div class="section__inner">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
+    </div>
+
+    <section class="section3 section">
+      <div class="section__inner">
+        <div class="section3__imagewrap">
+          <img
+            src="https://picsum.photos/id/1021/1000/800"
+            alt=""
+            class="parallax-image"
+            data-speed="0.03"
+          />
+        </div>
+        <div class="section3__imagewrap">
+          <img
+            src="https://picsum.photos/id/1074/1000/800"
+            alt=""
+            class="parallax-image"
+            data-speed="0.03"
+          />
+        </div>
+        <div class="section3__imagewrap">
+          <img
+            src="https://picsum.photos/id/419/1000/800"
+            alt=""
+            class="parallax-image"
+            data-speed="0.03"
+          />
+        </div>
+        <div class="section3__imagewrap">
+          <img
+            src="https://picsum.photos/id/425/1000/800"
+            alt=""
+            class="parallax-image"
+            data-speed="0.03"
+          />
+        </div>
+        <div class="section3__imagewrap">
+          <img
+            src="https://picsum.photos/id/433/1000/800"
+            alt=""
+            class="parallax-image"
+            data-speed="0.03"
+          />
+        </div>
+        <div class="section3__imagewrap">
+          <img
+            src="https://picsum.photos/id/488/1000/800"
+            alt=""
+            class="parallax-image"
+            data-speed="0.03"
+          />
+        </div>
+      </div>
+    </section>
+
+    <section class="section4 section">
+      <div class="section__inner">
+        <div class="section4__fixedimage">
+          <img src="https://picsum.photos/id/550/1000/800" alt="" />
+        </div>
+        <div class="section4_content">
+          <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+            commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+            Nulla consequat massa quis enim. Donec pede justo, fringilla vel,
+            aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
+            imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede
+            mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum
+            semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
+            porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem
+            ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra
+            nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.
+            Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
+            nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
+            condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem
+            neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar,
+            hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus.
+            Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
+            Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed
+            fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed
+            consequat, leo eget bibendum sodales, augue velit cursus nunc,
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <div class="footer section">
+      <p class="title fadein">End</p>
+    </div>
 
     <script type="text/javascript" src="./js/bundle.js"></script>
   </body>
